--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-17 12:15:49
+lastsearch = 2024-07-17 15:46:14
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -235.3%%
-title = Artificial Intelligence in Lung Cancer Screening: The Future Is ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10486721/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -194.1%%
