--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-17 13:36:56
+lastsearch = 2024-07-17 15:50:46
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 3.4%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
-match = -34.5%%
-title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
+match = -31.0%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -37,8 +37,8 @@ title = Chiếu điều hòa cao su non - Kho đệm
 url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.diepxuan.com]
-match = 65.5%%
-title = Điệp Xuân Chiếu điều hòa cao su 150x190
+match = 58.6%%
+title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
