--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-17 19:59:31
+lastsearch = 2024-07-17 20:22:54
 
 [shopee.vn]
-match = -45.8%%
-title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = 16.7%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = 29.2%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
