--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-17 15:51:17
+lastsearch = 2024-07-17 20:22:43
 
 [helloviettravel.com]
 match = -50.0%%
@@ -43,8 +43,8 @@ url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
 match = -218.8%%
-title = Khám phá Làng du lịch Mỹ Khánh (Cần Thơ) - Tập 3: Đại náo ...
-url = https://www.youtube.com/watch?v=esnw2jXy9g0
+title = Dự báo thời tiết du lịch 7 ngày tới từ ngày 18 đến ngày 24/07 ...
+url = https://www.youtube.com/watch?v=cszRyNpOLR8
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
