--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-17 16:46:58
+lastsearch = 2024-07-17 20:20:56
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -85.7%%
-title = Miền Bắc chiều và đêm nay còn mưa lớn cục bộ | VTVWDB
-url = https://www.youtube.com/watch?v=9CsOVMaSlyo
+match = -114.3%%
+title = 🇹🇼 Hướng Dẫn Du Lịch Đài Loan 2024 | Tất tần tật 7 ngày ở ...
+url = https://www.youtube.com/watch?v=Ce9gErYj7uY
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -42,9 +42,9 @@ title = Hướng Dẫn Đổi Hộ Chiếu Cho Người Việt Nam Ở Đài ...
 url = https://taiwandiary.vn/2023/02/27/huong-dan-doi-ho-chieu-cho-nguoi-viet-nam-o-dai-loan-moi-nhat/
 
 [www.roc-taiwan.org]
-match = -128.6%%
-title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
-url = https://www.roc-taiwan.org/vn_vi/cat/47.html
+match = -19.0%%
+title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
+url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
 match = -9.5%%
