--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-17 18:51:55
+lastsearch = 2024-07-17 20:18:10
 
 [dongagroup.vn]
 match = -272.7%%
@@ -62,9 +62,9 @@ title = Giường bọc nệm HELEN 2
 url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
 
 [shopee.vn]
-match = -263.6%%
-title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường/1m2
+match = -290.9%%
+title = Giường 2mx2m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường ngủ/2mx2m2
 
 [3dwarehouse.sketchup.com]
 match = -136.4%%
@@ -87,14 +87,14 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1&page=2
 
 [tiki.vn]
-match = -181.8%%
-title = Giường 2mx2m2 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=giường 2mx2m2
+match = -200.0%%
+title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
-url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
+match = -318.2%%
+title = Có bán Khung giường bằng kim loại tại Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/metal-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
