--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-17 18:14:41
+lastsearch = 2024-07-17 20:25:20
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -82.4%%
-title = I need advice #lawyer #hoa #taylorswift
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -170.6%%
+title = Original Video of Hoa Guy Fines Neighbor for to Many ...
+url = https://www.tiktok.com/discover/Original-video-of-hoa-guy-fines-neighbor-for-to-many-packages-on-porch?lang=en
 
 [www.steadily.com]
 match = 0.0%%
@@ -187,9 +187,9 @@ title =
 url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-homeowners-association-fines-fees-penalties-complaints/73599110007/
 
 [www.youtube.com]
-match = -164.7%%
-title = Intruder HOA Guy Fell Into My Pool - Caught On Camera
-url = https://www.youtube.com/shorts/hMyLkrY7ND8
+match = -188.2%%
+title = Florida family in legal fight with HOA over backyard pool ...
+url = https://www.youtube.com/watch?v=H3uIIXSYxfc
 
 [winknews.com]
 match = -5.9%%
