--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-17 18:18:49
+lastsearch = 2024-07-17 20:18:44
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,7 +37,7 @@ title = Customer reviews: Arctic Dreams 10& ...
 url = https://www.amazon.com/Dreamfoam-Bedding-10-Inch-Cooling-Mattress/product-reviews/B013L4ZWWW
 
 [forum.mattressunderground.com]
-match = -37.5%%
-title = Pulled the trigger today and purchased the Dreamfoam ...
-url = https://forum.mattressunderground.com/t/pulled-the-trigger-today-and-purchased-the-dreamfoam-ultimate-dreams-13inch-gel-memory-foam/6902
+match = -28.1%%
+title = dreamfoam 13" gel?? - General Mattresses Questions
+url = https://forum.mattressunderground.com/t/dreamfoam-13-gel/6456
 
