--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-17 18:29:23
+lastsearch = 2024-07-17 20:22:11
 
 [www.lazada.vn]
 match = -94.4%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/nem-sieu-nhe/
 [m.facebook.com]
 match = -100.0%%
 title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
-url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508&comment_id=695737957236976&reply_comment_id=699181416892630
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [www.instagram.com]
 match = -144.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -22.2%%
-title = Tatana - Nệm Drap Gối Cao Cấp
-url = https://www.facebook.com/tatana.vn/
+match = -150.0%%
+title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
+url = https://www.facebook.com/sieuthinem267/
 
 [voz.vn]
 match = 11.1%%
@@ -160,4 +160,9 @@ url = https://quochoi.vn/
 match = -172.2%%
 title = Nem rán / Chả giò • Vietnamese Fried Rolls - MM Bon Appétit
 url = https://mmbonappetit.com/nem-ran/
+
+[en.wikipedia.org]
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Nem
 
