--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-17 18:52:18
+lastsearch = 2024-07-17 21:13:32
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Everon - Điệp Xuân
 url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BC23 072
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-73
+match = 0.0%%
+title = Bộ sản phẩm SH_BC23 075
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-075
 
 [everon.online]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22032 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22032.html
+title = Everon EPC-22045 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epc22045.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -118,8 +118,8 @@ url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [staging.happynest.com.vn]
 match = 2.9%%
-title = Bộ Sản Phẩm Chăn Ga Gối Sông Hồng Cao Cấp SH-H18 ...
-url = https://staging.happynest.com.vn/shop/bo-san-pham-chan-ga-goi-song-hong-cao-cap-sh-h18-0-iobyhat73/bo-san-pham-chan-ga-goi-song-hong-cao-cap-sh-h18-060-ga-remchun-180200cm.html
+title = Bộ Sản Phẩm Chăn Ga Gối Sông Hồng Cao Cấp SH-H17 ...
+url = https://staging.happynest.com.vn/shop/bo-san-pham-chan-ga-goi-song-hong-cao-cap-sh-h17-0-cgnkbmm21/bo-san-pham-chan-ga-goi-song-hong-cao-cap-sh-h17-052-ga-remchun.html
 
 [archive.org]
 match = 6.2%%
