--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-17 18:44:23
+lastsearch = 2024-07-17 21:46:10
 
 [www.tiktok.com]
-match = -200.0%%
-title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
+match = -231.2%%
+title = Reverse Corrector #beautytok #makeuphacks #colorcorection ...
+url = https://www.tiktok.com/@hudabeauty/video/7378924653521177898
 
 [digitalmaine.com]
 match = -75.0%%
@@ -177,9 +177,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [htk684.com]
-match = -131.2%%
-title = tui warmdream 16 - Flying TUI Dreamliner - htk684.com
-url = https://htk684.com/products/lrrxzabx-255/
+match = -225.0%%
+title = chance chanel מחיר - השוואת מחירים לשה chanel - htk684.com
+url = https://htk684.com/blogs/ljsfovqk-111//
 
 [m.aquaserviecuador.com]
 match = -125.0%%
@@ -200,4 +200,14 @@ url = https://www.alchemy311.com/blogs/gnlcenqu-283/
 match = -212.5%%
 title = multiple return in python - bolsa pequena da louis vuitton
 url = https://globalmaxhosting.com/blogs/tyonogkq-277//
+
+[alchemy311.com]
+match = -237.5%%
+title = refaccionaria orma tesistan - Orma Autopartes Suc. Tesistan ...
+url = https://alchemy311.com/products/vtjhhjsp-137//
+
+[cheaptheatreticket.com]
+match = -168.8%%
+title = līdzjūtības pantiņi - More - cheaptheatreticket.com
+url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
