--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-17 21:45:45
+lastsearch = 2024-07-18 00:10:42
 
 [everon.online]
 match = -12.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = 16.0%%
-title = Mua Bán Chung Cư Cao Cấp Hà Nội
-url = https://m.facebook.com/groups/462923528145184/posts/1119223722515158/
+match = -48.0%%
+title = MUA BÁN CHUNG CƯ HÀ NỘI | Chính chủ cần bán nhanh ...
+url = https://m.facebook.com/groups/224257585866951/posts/chính-chủ-cần-bán-nhanh-căn-1-ngủ-toà-s106-smart-city-diện-tích-43m2-ban-công-tâ/845419197084117/
 
 [dantri.com.vn]
 match = -60.0%%
