--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-17 21:39:32
+lastsearch = 2024-07-18 00:18:08
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -177,9 +177,9 @@ title = Men uống ENTER PROBI - Men vi sinh chứa 4 tỷ lợi khuẩn ...
 url = https://vicopharonli.com/men-vi-sinh-enterprobi
 
 [www.tiktok.com]
-match = -39.3%%
-title = Nay tui thử KCN Thái Lan nè #mizumivietnam#mizumilove
-url = https://www.tiktok.com/@hue.uiiii/video/7295953864530971912
+match = -50.0%%
+title = Cla250 14年
+url = https://www.tiktok.com/discover/cla250-14年
 
 [dropbiz.vn]
 match = -9.1%%
