--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-17 23:47:08
+lastsearch = 2024-07-18 00:16:01
 
 [demxanh.com]
 match = -41.2%%
@@ -14,12 +14,12 @@ url = https://demxanh.com/tham-trai-san-bali.html
 [tiki.vn]
 match = -117.6%%
 title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
 
 [www.lazada.vn]
-match = -152.9%%
-title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
+match = -135.3%%
+title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
 
 [thegioidemviet.vn]
 match = -135.3%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
 url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
-match = -111.8%%
-title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
-url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
+match = -105.9%%
+title = Thảm lì ép Hàn Quốc (M9 hoa xanh) - STHA0002
+url = https://sammas.vn/copy-of-tham-li-ep-han-quoc-stha0001
 
 [shopee.vn]
 match = -200.0%%
@@ -65,4 +65,9 @@ url = https://www.instagram.com/sophmapua/reel/C8XBG8Svzyh/
 match = -205.9%%
 title = Những thông số kích thước thảm trải sàn thường dùng cho ...
 url = http://thamachau.vn/nhung-thong-so-kich-thuoc-tham-trai-san-thuong-dung
+
+[demtot.vn]
+match = 5.9%%
+title = Lưu trữ Thảm BALI trải sàn
+url = https://demtot.vn/tham-nhap-khau
 
