--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-18 00:33:44
+lastsearch = 2024-07-18 02:09:40
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -25.0%%
+title = Chiếu điều hòa 1m6; 1m8, 2m2 -Drap beding - mẫu4
+url = https://shopee.vn/Chiếu-điều-hòa-1m6-1m8-2m2-Drap-beding-mẫu4-i.18452594.18826561791
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chiếu điều hòa có gối 16
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 
 [goni.vn]
-match = 4.2%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -50.0%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = -4.2%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -32,9 +32,9 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON
 url = https://giadunganhvan.vn/chieu-dieu-hoa-cao-su-non-p769.html
 
 [thegioinem.com]
-match = 29.2%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = -4.2%%
+title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
+url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [sieuthidem.vn]
 match = 16.7%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = 8.3%%
-title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html
+match = -70.8%%
+title = Bộ Chiếu Điều Hòa Kèm Gối Cho Bé Yêu, Chất Liệu Sợi Lụa Độ ...
+url = https://www.lazada.vn/products/bo-chieu-dieu-hoa-kem-goi-cho-be-yeu-chat-lieu-soi-lua-do-mem-deo-cao-mau-sac-thanh-nha-san-pham-co-kha-nang-khang-khuan-an-toan-i281832944.html
 
 [ababy.com.vn]
 match = -4.2%%
@@ -165,4 +165,9 @@ url = https://h5.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-chi
 match = -41.7%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+
+[phatdatbinhthoi.com.vn]
+match = -33.3%%
+title = 25//06 VỀ HÀNG. CHIẾU ĐIỀU HOÀ MÁT LẠNH COCO 1.6 ...
+url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-11506.htm
 
