--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-18 00:16:12
+lastsearch = 2024-07-18 02:14:31
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -146.7%%
-title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
-url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
+match = -100.0%%
+title = [MẪU VÀ GIÁ] 70+ BỘ BÀN GHẾ ĐÁ NGOÀI TRỜI
+url = https://ghedagiago.com/danh-muc/ban-ghe-da-ngoai-troi/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -22,9 +22,9 @@ title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN MỚI NHẤT
 url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
-match = -93.3%%
-title = Ghế đá băng dài GDCV-59 - 0933832979
-url = https://ghedaviet.com/ghe-da-bang-dai-gdcv-59
+match = 30.0%%
+title = bàn ghế đá
+url = https://ghedaviet.com/
 
 [anmoc.vn]
 match = -173.3%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -120.0%%
-title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
-url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
+match = -133.3%%
+title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
+url = https://ghedamienbac.com/ban-ghe-da/
 
 [bangheda.info]
 match = -140.0%%
@@ -62,9 +62,9 @@ title = Bảng Giá Bộ Bàn Ghế Đá Tự Nhiên, Sân Vườn Mới Nhất 
 url = https://damynghedps.vn/cong-trinh-da/ban-ghe-da/
 
 [noithathoaphat.com]
-match = -73.3%%
-title = Ghế da cao cấp - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da
+match = -93.3%%
+title = Ghế da chân quỳ FMQ501 | Ghế phòng họp
+url = https://noithathoaphat.com/ghe-da-chan-quy-fmq501
 
 [www.lazada.vn]
 match = -53.3%%
